--- a/myshop/src/styles.scss
+++ b/myshop/src/styles.scss
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+
+body {
+  text-align: right;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #B6A6CA;
+}
+button
+{
+  background-color: #A09ABC;
+}
+
+h2, th, h1{
+  color: whitesmoke;
+}
