--- a/myshop/src/app/components/products/products.component.html
+++ b/myshop/src/app/components/products/products.component.html
@@ -1,3 +1,32 @@
-<p>products works!</p>
 
-<button routerLink="/landing">Powrot</button>
+<app-panel-top></app-panel-top>
+
+
+<div class="products">
+    <table style="margin:0 auto;" id="productsTable">
+        <thead *ngIf="this.mainService.products">
+            <tr>
+                <th>obrazek</th>
+                <th>dane</th>
+                <th>akcje</th>
+            </tr>
+        </thead>
+        <tbody>
+            <ng-container *ngFor="let product of this.mainService.products?.productsTable">
+                <tr style="background-color: #E1DEE9;">
+                    <td><img src="{{product.thumbnail}}" alt=""></td>
+                    <td>
+                        <ul>
+                            <li>Tytuł: {{product.title}}</li>
+                            <li>Cena: {{product.price}}</li>
+                            <li>Kategoria: {{product.category}}</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <button (click)="addToCart(product)">Do koszyka</button>
+                    </td>
+                </tr>
+            </ng-container>
+        </tbody>
+    </table>
+</div>
